--- a/practice/package.json
+++ b/practice/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx live-server --port 3000"
+    "dev": "./node_modules/.bin/live-server --port=3000"
   },
   "author": "",
   "license": "ISC",
